Fix the headers in the account section that was overflowing to the right

--- a/public/less/account.less
+++ b/public/less/account.less
@@ -43,10 +43,15 @@
 .noprovider > .col {
      float: left;
      width: 430px;
+
+    .account-header.company {
+        border-bottom: none;
+    }
 }
 
 .account > .col.float-right {
    float: right;
+
 }
 
 .account-header {
